Revert to minima theme,

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-chirpy
+theme: minima
 title: Software Kitchen Tech Blog
 author: Tomasz Malinowski
 description: Dive into the heart of the Software Kitchen, where coding meets creativity. My Tech Blog serves up a feast of programming tutorials, tech insights, and innovative solutions, all cooked to perfection. Whether you're a newbie taking your first steps in the coding world, or a seasoned developer looking to spice up your skills, the Software Kitchen has a dish for everyone. Join us as we explore the rich flavors of technology, and let's cook up some code together!
